src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  color: #151007;

}
body{
    font-family: 'Poppins';
}

